login page button UI: by default will be disabled and after filling right value it will be active and ui of button also will change

--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -35,7 +35,7 @@
                             </md-input-container>
                         </div>
                         <div class="login_row">
-                            <md-button type="submit" ng-disabled="loginForm.$invalid" class="md-primary login_submit">Login</md-button>
+                            <md-button type="submit" ng-disabled="loginForm.$invalid" class="md-primary login-disabled-btn " ng-class="{'login_submit': !loginForm.$invalid}">Login</md-button>
                         </div>
                     </form>
                </md-content>
