button css changed

--- a/src/app/components/login/login.scss
+++ b/src/app/components/login/login.scss
@@ -51,7 +51,7 @@
                     left: 0px;
                 }
                 .login-disabled-btn{
-                    background: #eee;
+                    background: #f1f1f1;
                     width: 100%;
                     color: #888;                    
                     margin: 0px;
