remove mixin error + scss

--- a/src/sass/_mixin.scss
+++ b/src/sass/_mixin.scss
@@ -1,5 +1,5 @@
 // border radius mixin
-@mixin border-radius($radius: 5px) {
+@mixin border-radius($radius) {
     -webkit-border-radius: $radius;
     -moz-border-radius: $radius;
     -ms-border-radius: $radius;
