--- a/src/app/directives/toolbar/toolbar.view.html
+++ b/src/app/directives/toolbar/toolbar.view.html
@@ -5,13 +5,13 @@
                 <img src="./img/logo.png" alt="Qualdable Logo" width="114px" height="50px" />
             </span>
             <span flex></span>
-            <div layout="row" style="position: relative;" ng-if="!vm.publicPath || vm.showUser">
+            <!--<div layout="row" style="position: relative;" ng-if="!vm.publicPath || vm.showUser">
                 <md-menu-bar ng-class="{'user_profile_otherProvider': vm.publicPath && vm.showUser}">
                     <md-menu>
                         <md-button class="md-primary dropdown user_pro_btn" ng-click="$mdMenu.open()" ng-class="{'active':vm.myDropdownIsActive}">
 
                             <span class="user_profile_name">
-                                <!--<b class="user_name">{{vm.username}}</b>-->
+                                <!--<b class="user_name">{{vm.username}}</b>
                                 <b class="user_name">Bruntely Cristan</b>
                             </span>
                             <span> <img src="./img/user.png" alt=""  /></span>
@@ -31,8 +31,8 @@
                 </md-menu-bar>
                 <md-button class="setting_button" ng-if="!vm.publicPath" aria-label="help">
                     <!-- <i class="material-icons">help_outline</i> -->
-                    <a href="#"><img src="../../../img/setting.png" width="24" height="24" alt="Setting" /></a>
-                </md-button>
+                   <!-- <a href="#"><img src="../../../img/setting.png" width="24" height="24" alt="Setting" /></a>
+                </md-button>-->
 
             </div>
         </div>
